<resources>
    <string name="app_name">Mastermind</string>
    <string name="how_to_play">How To Play</string>
    <string name="start_game">New Game</string>
    <string name="title_activity_guide">GuideActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="master">Master</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="kids">Kids</string>
    <string name="difficulty_modes">Choose Difficulty</string>
    <string name="logomastermind">LogoMasterMind</string>
    <string name="congrats">Congrats!</string>
    <string name="you_are_a_true_mastermind">You are a true Mastermind!</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="icon_close">Icon Close</string>
    <string name="win_trophy">Win Trophy</string>
    <string name="sorry">Sorry!</string>
    <string name="you_have_no_attempts_left">You have no attempts left.</string>
    <string name="lose_picture">Lose Picture</string>
    <string name="ok">OK</string>
    <string name="guide_note">You have to guess the correct color pattern in order to win.\nAfter pressing \"OK\" you will get a validation.\nThis validation will help you to crack the code!</string>
    <string name="guide_heading2">Colorcode for Roundvalidation:</string>
    <string name="guide_colorCode">White - a correct color on its correct position\nBlack - a correct color on a wrong position\nBlank - a wrong color</string>
</resources>